Refactor ApiGatewayV2Test.java based on the test format in this other separate pull request (https://github.com/micronaut-projects/micronaut-aws/pull/2544).